Project

General

Profile

Actions

Bug #16044

closed

Float::ROUNDS (FLT_ROUNDS) should not be a constant.

Bug #16044: Float::ROUNDS (FLT_ROUNDS) should not be a constant.

Added by matz (Yukihiro Matsumoto) about 7 years ago. Updated over 6 years ago.

Status:
Closed
Assignee:
-
Target version:
[ruby-core:94139]
Tags:

Description

According to the reference, FLT_ROUNDS is not a constant in C.

FLT_ROUNDS
Returns the current rounding direction of floating-point arithmetic operations.
Notes
The rounding mode can be changed with fesetround and FLT_ROUNDS reflects that change.

So it should not be a constant in Ruby too. Or it should be removed altogether.

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #1 [ruby-core:94141]

Agree to remove.
Deprecate it for now?

Updated by matz (Yukihiro Matsumoto) about 7 years ago Actions #2 [ruby-core:94157]

That would be nice.

Matz.

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #3

  • Status changed from Open to Closed

Applied in changeset git|e89d9f3debab353d1c5a5162752af8f201d98d49.


Deprecate Float::ROUNDS, which should not be a constant

[Bug #16044]

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #4

  • Status changed from Closed to Open

Updated by hsbt (Hiroshi SHIBATA) over 6 years ago Actions #5

  • Tags set to ruby3

Updated by jeremyevans0 (Jeremy Evans) over 6 years ago Actions #6

  • Status changed from Open to Closed
Actions

Also available in: PDF Atom