Deprecate Float::ROUNDS, which should not be a constant

[Bug #16044]